--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
+    "express": "^4.18.2",
     "jsdom": "^21.1.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
