--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "extractormailsgoogle",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "node app.js"
   },
@@ -9,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "express": "^4.18.2",
     "jsdom": "^21.1.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
